--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "run-p start:server start:client",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --sourcemaps=false --single-run",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:client": "ng serve --proxy-config proxy.conf.json --open",
+    "start:server": "json-server --watch db.json --routes routes.json"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +23,18 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^4.0.5",
+    "@ngrx/store": "^4.0.3",
     "core-js": "^2.4.1",
+    "json-server": "^0.12.0",
+    "npm-run-all": "^4.0.2",
     "rxjs": "^5.4.2",
+    "semantic-ui-button": "^2.2.12",
+    "semantic-ui-input": "^2.2.12",
+    "semantic-ui-reset": "^2.2.12",
+    "semantic-ui-table": "^2.2.12",
+    "uuid-v4": "^0.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -41,6 +53,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-spec-reporter": "0.0.31",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
